floorplan layout correct location with gaps

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 #floorp {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 2fr 1fr 2fr;
 }
 
@@ -51,17 +51,14 @@ div {
 
 .livingroom{
   background-color: #EFE7BC;
-  display: grid;
   grid-row: 1/3;
-  grid-column: 3/4;
+  grid-column: 2/4;
   
 }
 .kitchen {
-  grid-template-columns: 1fr 1fr;
+
   grid-row: 1/3;
-  grid-column: 4/5;
-  height: 200px;
-  width: 100px;
+  grid-column: 4;
   background-color: #FFA384;
 
 }
@@ -85,12 +82,33 @@ div {
   background-color: #658EA9;
 
 }
-#bedroom-1{
-  display: grid;
-
+#bed-1{
+grid-row: 1/2;
+grid-column: 1/2;
 
 }
+#bed-3 {
+  grid-row: 3;
+  grid-column: 4;
+  
+}
+#bed-2 {
+  grid-row: 3;
+  grid-column: 1;
+
+}
+
 .bath {
   background-color: #74BDCB;
 }
 
+
+#bath-Full {
+  grid-row: 1;
+  grid-column: 2/3;
+}
+#bath-Half {
+  grid-row: 3;
+  grid-column: 2/3;
+
+}
